[tool.poetry]
name = "scraping-speed"
version = "0.1.0"
description = "blog post"
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
lxml = "^4.5.1"
bs4 = "^0.0.1"
joblib = "^0.15.1"
tqdm = "^4.46.0"
snakeviz = "^2.1.0"
asyncio = "^3.4.3"
pycurl = "^7.43.0"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
